--- a/lib/core/viewer/components/video-view/video-view.component.html
+++ b/lib/core/viewer/components/video-view/video-view.component.html
@@ -1,3 +1,6 @@
-<video controls>
-    <source [src]="urlFile" [type]="mimeType" />
-</video>
+<figure>
+    <video controls #video>
+        <source [src]="urlFile" [type]="mimeType" />
+    </video>
+</figure>
+
