--- a/lib/core/viewer/components/video-view/video-view.component.html
+++ b/lib/core/viewer/components/video-view/video-view.component.html
@@ -1,6 +1,26 @@
-<figure>
-    <video controls #video>
-        <source [src]="urlFile" [type]="mimeType" />
-    </video>
-</figure>
+<div class="player">
+    <div class="player__content">
+        <video class="player__video" controls #video>
+            <source [src]="urlFile" [type]="mimeType" />
+        </video>
+    </div>
+    <div class="player__range">
+        <mat-slider></mat-slider>
+    </div>
+    <div class="player__controls">
+        <button id="playpause" type="button" data-state="play">Play/Pause</button>
+        <!--
+        <button id="stop" type="button" data-state="stop">Stop</button>
+        <div class="progress">
+            <progress id="progress" value="0" min="0">
+                <span id="progress-bar"></span>
+            </progress>
+        </div>
+        <button id="mute" type="button" data-state="mute">Mute/Unmute</button>
+        <button id="volinc" type="button" data-state="volup">Vol+</button>
+        <button id="voldec" type="button" data-state="voldown">Vol-</button>
+        <button id="fs" type="button" data-state="go-fullscreen">Fullscreen</button>
+        -->
+    </div>
+</div>
 
