shaping out the API

--- a/demo-shell/src/app/components/search/search-result.component.html
+++ b/demo-shell/src/app/components/search/search-result.component.html
@@ -8,6 +8,8 @@
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <app-facet-container
+                    [id]="facet.id"
+                    [context]="context"
                     [selector]="facet.component.selector"
                     [settings]="facet.component.settings">
                 </app-facet-container>
