code cleanup and binding fixes

--- a/demo-shell/src/app/components/search/search-result.component.html
+++ b/demo-shell/src/app/components/search/search-result.component.html
@@ -50,7 +50,7 @@
 
             <mat-expansion-panel
                 *ngFor="let field of responseFacetFields"
-                [expanded]="field.$expanded ? true : false"
+                [expanded]="field.$expanded"
                 (opened)="onFacetFieldExpanded(field)"
                 (closed)="onFacetFieldCollapsed(field)">
                 <mat-expansion-panel-header>
