--- a/demo-shell/src/app/components/search/search-result.component.scss
+++ b/demo-shell/src/app/components/search/search-result.component.scss
@@ -1,17 +1,13 @@
 .adf-search-results {
     display: flex;
 
-    &__panel {
+    .adf-search-settings {
         width: 260px;
         border: 1px solid #eee;
     }
 
     &__facets {
         margin: 5px;
-    }
-
-    &__widgets {
-        font: inherit;
     }
 
     &__content {
