--- a/lib/content-services/search/components/search-settings/search-settings.component.html
+++ b/lib/content-services/search/components/search-settings/search-settings.component.html
@@ -1,1 +1,55 @@
-<ng-content></ng-content>
+<mat-accordion multi="true" displayMode="flat">
+
+    <mat-expansion-panel
+        *ngFor="let category of queryBuilder.categories"
+        [expanded]="category.expanded"
+        (opened)="onCategoryExpanded(category)"
+        (closed)="onCategoryCollapsed(category)">
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                {{ category.name }}
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <adf-search-widget-container
+            [id]="category.id"
+            [context]="queryBuilder"
+            [selector]="category.component.selector"
+            [settings]="category.component.settings">
+        </adf-search-widget-container>
+    </mat-expansion-panel>
+
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>Facet Queries</mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="checklist">
+            <ng-container *ngFor="let query of responseFacetQueries">
+                <mat-checkbox
+                    *ngIf="query.count > 0"
+                    [checked]="query.$checked"
+                    (change)="onFacetQueryToggle($event, query)">
+                    {{ query.label }} ({{ query.count }})
+                </mat-checkbox>
+            </ng-container>
+        </div>
+    </mat-expansion-panel>
+
+    <mat-expansion-panel
+        *ngFor="let field of responseFacetFields"
+        [expanded]="field.$expanded"
+        (opened)="onFacetFieldExpanded(field)"
+        (closed)="onFacetFieldCollapsed(field)">
+        <mat-expansion-panel-header>
+            <mat-panel-title>{{ field.label }}</mat-panel-title>
+        </mat-expansion-panel-header>
+        <div class="checklist">
+            <mat-checkbox
+                *ngFor="let bucket of field.buckets"
+                [checked]="bucket.$checked"
+                (change)="onFacetToggle($event, field, bucket)">
+                {{ bucket.display || bucket.label }} ({{ bucket.count }})
+            </mat-checkbox>
+        </div>
+    </mat-expansion-panel>
+
+</mat-accordion>
