translation support for category names

--- a/lib/content-services/search/components/search-settings/search-settings.component.html
+++ b/lib/content-services/search/components/search-settings/search-settings.component.html
@@ -7,7 +7,7 @@
         (closed)="onCategoryCollapsed(category)">
         <mat-expansion-panel-header>
             <mat-panel-title>
-                {{ category.name }}
+                {{ category.name | translate }}
             </mat-panel-title>
         </mat-expansion-panel-header>
         <adf-search-widget-container
