--- a/demo-shell/src/app/components/home/home.component.html
+++ b/demo-shell/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<header class="adf-home-background adf-primary-background-color">
+<header class="adf-home-background">
     <div class="adf-home-section ad">
         <div class="adf-home-headline">
             <h1 class="mat-h1">ADF</h1>
