--- a/demo-shell/src/app/components/home/home.component.scss
+++ b/demo-shell/src/app/components/home/home.component.scss
@@ -1,3 +1,9 @@
+:host {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .adf-home-header-background {
     overflow: hidden;
 }
@@ -8,6 +14,7 @@
 }
 
 .adf-home-headline {
+
     h1 {
         font-size: 56px;
         font-weight: 300;
