--- a/lib/core/sidenav-layout/components/sidenav-layout/sidenav-layout.component.scss
+++ b/lib/core/sidenav-layout/components/sidenav-layout/sidenav-layout.component.scss
@@ -4,6 +4,12 @@
 
     .sidenav-layout {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        .layout__content {
+            flex: 1 1 auto;
+        }
     }
 
     router-outlet {
