--- a/demo-shell/src/app/components/search/search-result.component.html
+++ b/demo-shell/src/app/components/search/search-result.component.html
@@ -1,12 +1,9 @@
 <div class="adf-search-results__facets">
-    <adf-search-chip-list [searchFilter]="searchFilter">
-    </adf-search-chip-list>
+    <adf-search-chip-list [searchFilter]="searchFilter"></adf-search-chip-list>
 </div>
 
 <div class="adf-search-results">
-    <adf-search-filter #searchFilter
-        [queryBuilder]="queryBuilder">
-    </adf-search-filter>
+    <adf-search-filter #searchFilter></adf-search-filter>
 
     <div class="adf-search-results__content">
         <adf-document-list
