add lock-node service + button in context menu

--- a/demo-shell/src/app/components/files/files.component.html
+++ b/demo-shell/src/app/components/files/files.component.html
@@ -329,6 +329,8 @@
                     </content-action>
                     <content-action
                         icon="lock"
+                        permission="lock"
+                        handler="lock"
                         title="Lock">
                     </content-action>
                 </content-actions>
